--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,25 @@
     <string name="question_asia">Lake Baikal is the world\'s oldest
         and deepest freshwater lake.</string>
 
+    <string name="question_1_multiple">
+        Who was the first Earthling to achieve warp drive and make first contact with the Vulcan?
+    </string>
+    <string name="question_1_choice_1">Doc Brown</string>
+    <string name="question_1_choice_2">James Kirk</string>
+    <string name="question_1_choice_3">Rick Sanchez</string>
+    <string name="question_1_choice_4">Zaphod Beeblebrox</string>
+
+    <string name="question_2_multiple">
+        What do Klingons consider to be most important?
+    </string>
+    <string name="question_2_choice_1">Profit</string>
+    <string name="question_2_choice_2">Honor</string>
+    <string name="question_2_choice_3">Logic</string>
+    <string name="question_2_choice_4">Religion</string>
+
+    <string name="submit_button">Submit</string>
+
+
+
+
 </resources>
