--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,8 +21,8 @@
         Who was the first Earthling to achieve warp drive and make first contact with the Vulcan?
     </string>
     <string name="question_1_choice_1">Doc Brown</string>
-    <string name="question_1_choice_2">James Kirk</string>
-    <string name="question_1_choice_3">Rick Sanchez</string>
+    <string name="question_1_choice_2">Rick Sanchez</string>
+    <string name="question_1_choice_3">Zefram Cochrane</string>
     <string name="question_1_choice_4">Zaphod Beeblebrox</string>
 
     <string name="question_2_multiple">
