Update QuizActivity to clear radio button when switching questions. Update QuizActivity to toast an error if no answer is selected.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
 
     <string name="submit_button">Submit</string>
 
+    <string name="not_selected_error">Please select an answer!</string>
+
 
 
 
